Re-organize some code, remove some unused code, add one javascript event to make hamburgers work correctly.
(I was so close to no-js menu!)

--- a/assets/less/pages/donations.less
+++ b/assets/less/pages/donations.less
@@ -55,8 +55,8 @@
         animation-name: fade-in;
         transition: all .5s ease-in;
 
-        border: 1px solid #DEDEE0;
-        border-radius: 6px;
+        border: var(--border-size) solid var(--border-color);
+        border-radius: var(--border-radius);
         box-shadow: var(--shadow-xl);
 
       }
