--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -55,6 +55,14 @@
   margin: 0 auto;
 }
 
+.hamburger-btn {
+  display: none;
+
+  @media (max-width: @lg) {
+    display: block;
+  }
+}
+
 .nav-links {
   display: flex;
   align-items: center;
@@ -83,7 +91,7 @@
       .sub-nav-panel {
         background-color: var(--bg);
         color: var(--txt);
-        border-radius: 12px;
+        border-radius: var(--border-radius-lg);
 
         // Add a large shadow to help the panel contrast against
         box-shadow: var(--shadow-2xl);
@@ -122,7 +130,7 @@
           padding-right: 2rem;
         }
 
-        li {
+        .desktop-nav-container {
           cursor: pointer;
           list-style: none;
           padding-top: 1rem;
@@ -135,7 +143,7 @@
           }
         }
 
-        li > a {
+        .desktop-nav-container > a {
           display: flex;
           min-height: 4rem;
           padding-bottom: 1rem;
@@ -143,7 +151,7 @@
           text-decoration: none;
         }
 
-        li:last-child > a {
+        .desktop-nav-container:last-child > a {
           border: none;
         }
       }
@@ -169,5 +177,66 @@
   .nav-ln:has(+ .sub-nav-container:focus-within)::after {
     // For that sweet underline.
     width: 100%;
+  }
+
+
+  @media (max-width: @lg) {
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    background-color: var(--color-white);
+    color: var(--txt);
+
+    width: 60%;
+    right: 0;
+    top: 64px;
+
+    &.expanded {
+      display: block;
+    }
+
+    border-radius: 12px;
+    align-items: unset;
+
+    .header-download,
+    .header-donate {
+      display: none;
+    }
+
+    padding-left: 1rem;
+    padding-right: 1rem;
+
+    .nav-entry {
+      border-bottom: 2px var(--color-gray-30) solid;
+
+      .sub-nav-container {
+        position: relative;
+      }
+    }
+
+    .nav-entry:last-child {
+      border: none;
+    }
+  }
+}
+
+.always-show {
+  display: none;
+}
+
+// For those no-js folks on tiny screens
+@media (max-width: @lg) {
+  .always-show {
+    position: relative;
+    display: flex;
+    width: 100%;
+    margin-top: var(--nav-height);
+
+    .nav-links {
+      display: block;
+      position: static;
+      left: 0;
+      width: 100%;
+    }
   }
 }
