WIP style the navigation for mobile views.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -5,6 +5,7 @@
 @import "./new/shadows.less";
 @import "./new/sizing.less";
 @import "./new/layout.less";
+@import "./new/variables.less";
 // Components
 @import "./new/components/accordion.less";
 @import "./new/components/buttons.less";
@@ -19,4 +20,3 @@
 @import "./pages/participate.less";
 @import "./pages/download.less";
 
-// Page template stuff
