--- a/assets/less/pages/contact-us.less
+++ b/assets/less/pages/contact-us.less
@@ -17,10 +17,9 @@
   .block {
     display: flex;
     flex-direction: column;
-    border: 1px var(--color-gray-30) solid;
-    border-radius: 12px;
+    border: var(--border-size) var(--border-color) solid;
+    border-radius: var(--border-radius-lg);
     padding: 1.75rem;
-    //width: 25%;
     width: 20rem;
     text-align: left;
 
