--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -70,6 +70,10 @@ header {
   height: 60px;
   width: auto;
   transition: color .2s;
+
+  @media (max-width: @lg) {
+    width: 25%;
+  }
 }
 
 .logo:hover,
