--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -27,7 +27,10 @@
       data-expanded="false"
       type="button"
     >
-      <span aria-hidden="true">{{ _('=') }}</span>
+      <span class="hamburger-icon" aria-hidden="true">
+        <span></span>
+        <span></span>
+      </span>
     </button>
     {% include 'includes/base/nav.html' %}
   </div>
