--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -28,6 +28,11 @@
   .site-nav {
     background: var(--nav-bg);
     color: var(--nav-txt);
+
+    --hamburger-background-inactive: var(--color-black);
+    --hamburger-foreground-inactive: var(--color-gray-30);
+    --hamburger-background-active: var(--color-white);
+    --hamburger-foreground-active: var(--color-black);
   }
 
   .section-text {
