--- a/sites/www.thunderbird.net/includes/base/nav.html
+++ b/sites/www.thunderbird.net/includes/base/nav.html
@@ -42,7 +42,7 @@
       </ul>
     </div>
   </li>
-  <li class="nav-entry">
+  <li class="nav-entry no-border">
     <a href="#" class="nav-ln">{{_('Contribute')}}</a>
     <div class="popover-container">
       <ul class="popover-panel">
@@ -51,14 +51,14 @@
       </ul>
     </div>
   </li>
-  <li>
+  <li class="nav-entry no-border">
     <div class="header-download">
       <a href="{{ url('thunderbird.download') }}" class="btn download-link btn-download">
         <span>{{ _('Download') }}</span>
       </a>
     </div>
   </li>
-  <li>
+  <li class="nav-entry no-border">
     <div class="header-donate">
       <a href="{{ donate_url('header') }}" class="btn">
         <span>{{ svg('heart') }}</span>
