Navigation: Fix hamburger button background

--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -79,7 +79,7 @@
   }
 }
 
-&[aria-expanded="true"].hamburger-btn::after {
+&[aria-expanded="true"].hamburger-btn {
   background-color: var(--hamburger-background-active);
   opacity: 100%;
 }
