Navigation: Fix javascript, and add tabindexes for safari.

--- a/sites/www.thunderbird.net/includes/base/nav.html
+++ b/sites/www.thunderbird.net/includes/base/nav.html
@@ -12,7 +12,7 @@
 </li>
 {% endmacro %}
 <ul id="nav-menu" class="nav-links">
-  <li class="nav-entry nav-expandable">
+  <li class="nav-entry nav-expandable" tabindex="0">
     <button
       aria-controls="nav-cat-products"
       class="nav-ln nav-expandable"
@@ -26,7 +26,7 @@
       </ul>
     </div>
   </li>
-  <li class="nav-entry nav-expandable">
+  <li class="nav-entry nav-expandable" tabindex="1">
     <button
       aria-controls="nav-cat-resources"
       class="nav-ln"
@@ -42,7 +42,7 @@
       </ul>
     </div>
   </li>
-  <li class="nav-entry nav-expandable">
+  <li class="nav-entry nav-expandable" tabindex="2">
     <button
       aria-controls="nav-cat-about"
       class="nav-ln"
@@ -57,7 +57,7 @@
       </ul>
     </div>
   </li>
-  <li class="nav-entry no-border nav-expandable">
+  <li class="nav-entry no-border nav-expandable" tabindex="3">
     <button
       aria-controls="nav-cat-contribute"
       class="nav-ln"
