Navigation: Hamburger menu update

--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -30,6 +30,7 @@
       <span class="hamburger-icon" aria-hidden="true">
         <span></span>
         <span></span>
+        <span></span>
       </span>
     </button>
     {% include 'includes/base/nav.html' %}
