--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -86,18 +86,22 @@
 
 &[aria-expanded="true"] > .hamburger-icon {
   // This isn't quite right...
-  @offsetY: 180%;
+  @offsetY: 195%;
 
   span {
     border-color: var(--hamburger-foreground-active);
   }
 
   span:nth-child(1) {
-    transform: translate(0, @offsetY) rotateZ(45deg);
+    transform: translate(1px, @offsetY) rotateZ(45deg);
   }
 
   span:nth-child(2) {
-    transform: translate(0, -@offsetY) rotateZ(-44deg);
+    opacity: 0;
+  }
+
+  span:nth-child(3) {
+    transform: translate(0, -@offsetY) rotateZ(-45deg);
   }
 
 }
@@ -106,7 +110,7 @@
   content: '';
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.2rem;
 
   span {
     margin: auto;
