General: Style dropdown elements

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -9,6 +9,7 @@
 // Components
 @import "./new/components/accordion.less";
 @import "./new/components/buttons.less";
+@import "./new/components/forms.less";
 @import "./new/components/site-nav.less";
 @import "./new/components/testimonial.less";
 
