--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -1,4 +1,11 @@
 .page-download {
+  .pretend-to-be-h6 {
+    display: inline-block;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-size: 18px;
+  }
+
   .two-columns {
     display: flex;
     flex-direction: row;
@@ -41,6 +48,7 @@
   .section-title {
     display: flex;
     align-items: center;
+
     h1 {
       margin-top: 0;
     }
@@ -127,6 +135,21 @@
       gap: 1rem;
       margin-top: 0.5rem;
       margin-bottom: 0.5rem;
+      width: 100%;
+
+      li {
+        white-space: nowrap;
+      }
+
+      li::after {
+        display: inline;
+        content: '|';
+        padding-left: 0.5rem;
+      }
+
+      li:last-child::after {
+        content: '';
+      }
     }
 
     @media (max-width: @md) {
