--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -20,4 +20,5 @@
 @import "./pages/contact-us.less";
 @import "./pages/participate.less";
 @import "./pages/download.less";
+@import "./pages/release-notes.less";
 
