Download: Add the daily warning, and play with some colour.

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -370,6 +370,18 @@ section {
   color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
+
+  // Playing with some colour
+  &.beta {
+    background: none;
+    color: var(--txt);
+    //background-image: linear-gradient(135deg, #E74EB9 0%, #882395 100%);
+  }
+  &.daily {
+    background: none;
+    color: var(--txt);
+    //background-image: linear-gradient(135deg, #EB002D 0%, #890019 100%)
+  }
 }
 
 .sub-tag {
