--- a/sites/www.thunderbird.net/includes/_enonly/release-notes.html
+++ b/sites/www.thunderbird.net/includes/_enonly/release-notes.html
@@ -88,7 +88,7 @@
           {{ note.note|markdown|safe }}
         </aside>
         {% if is_beta %}
-        <aside>
+        <aside class="note-bug-numbers">
           {{ note.bug_links|markdown|safe }}
         </aside>
         {% endif %}
