--- a/assets/less/pages/release-notes.less
+++ b/assets/less/pages/release-notes.less
@@ -9,11 +9,11 @@
   }
 
   .note-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
     align-items: start;
-    flex-direction: row;
     margin-bottom: 1rem;
-    gap: 3rem;
   }
 
   .note-line {
@@ -29,14 +29,38 @@
   }
 
   .note-entry {
-    margin: 0;
+    margin: 0 3rem 0 0;
+    grid-row: 1;
   }
 
   .note-text {
     text-align: left;
     font-weight: 500;
+    grid-row: 1;
+
     p {
       margin: 0;
+    }
+  }
+
+  .note-bug-numbers {
+    width: 100%;
+    grid-row: 2;
+    grid-column: 1 / span 2;
+
+    p {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 1rem;
+    }
+
+    // per each bug
+    a::after {
+      content: ',';
+    }
+    a:last-child::after {
+      content: '';
     }
   }
 }
