--- a/assets/less/pages/release-notes.less
+++ b/assets/less/pages/release-notes.less
@@ -10,7 +10,7 @@
 
   .note-container {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 7rem 2fr;
     grid-template-rows: 1fr 1fr;
     align-items: start;
     margin-bottom: 1rem;
@@ -29,7 +29,7 @@
   }
 
   .note-entry {
-    margin: 0 3rem 0 0;
+    margin: 0 1rem 0 0;
     grid-row: 1;
   }
 
