General: Point careers to mozilla.org for now.

--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -31,7 +31,7 @@
         <ul>
           <li><a href="{{ url('thunderbird.about') }}" class="dotted">{{_('Who We Are')}}</a></li>
           <li><a href="{{ url('thunderbird.contact') }}" class="dotted">{{_('Contact Us')}}</a></li>
-          <li><a href="{{ url('thunderbird.careers') }}" class="dotted">{{_('Careers')}}</a></li>
+          <li><a href="{{ url('mozorg.careers.tb') }}" class="dotted">{{_('Careers')}}</a></li>
         </ul>
       </div>
       <div class="site-link-section">
