--- a/sites/www.thunderbird.net/includes/base/nav.html
+++ b/sites/www.thunderbird.net/includes/base/nav.html
@@ -53,7 +53,7 @@
       <ul class="popover-panel">
         {{ nav_entry(svg('base/icons/menu/about'), _('Who We Are'), _('Learn how our values, community, and organization shape the future of Thunderbird.'), url('thunderbird.about')) }}
         {{ nav_entry(svg('base/icons/menu/contact'), _('Contact Us'), _('Find out who to contact and how.'), url('thunderbird.contact')) }}
-        {{ nav_entry(svg('base/icons/menu/careers'), _('Careers'), _('We have an enthusiastic team with diverse talents. Learn how to join us.'), url('thunderbird.careers')) }}
+        {{ nav_entry(svg('base/icons/menu/careers'), _('Careers'), _('We have an enthusiastic team with diverse talents. Learn how to join us.'), url('mozorg.careers.tb')) }}
       </ul>
     </div>
   </li>
